src/Parser/cool.output
Nonterminals useless in grammar

   case
   case_list
   expression_list


Terminals unused in grammar

   ERROR


State 133 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: %empty
    8             | feature_list feature

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   10        | OBJECTID ':' TYPEID
   11        | OBJECTID ':' TYPEID ASSIGN expression
   12        | error ';'

   13 formal_list: %empty
   14            | formal
   15            | formal_list ',' formal

   16 formal: OBJECTID ':' TYPEID

   17 expression: OBJECTID ASSIGN expression
   18           | expression '.' OBJECTID '(' arg_expression_list ')'
   19           | expression '@' TYPEID '.' OBJECTID '(' arg_expression_list ')'
   20           | OBJECTID '(' arg_expression_list ')'
   21           | IF expression THEN expression ELSE expression FI
   22           | WHILE expression LOOP expression POOL
   23           | '{' block_expressions '}'
   24           | LET let_expression
   25           | CASE expression OF branch_list ESAC
   26           | NEW TYPEID
   27           | ISVOID expression
   28           | expression '+' expression
   29           | expression '-' expression
   30           | expression '*' expression
   31           | expression '/' expression
   32           | '~' expression
   33           | expression '<' expression
   34           | expression LE expression
   35           | expression '=' expression
   36           | NOT expression
   37           | '(' expression ')'
   38           | OBJECTID
   39           | INT_CONST
   40           | STR_CONST
   41           | BOOL_CONST

   42 block_expressions: expression ';'
   43                  | block_expressions expression ';'
   44                  | error ';'

   45 arg_expression_list: %empty
   46                    | expression
   47                    | arg_expression_list ',' expression

   48 let_expression: OBJECTID ':' TYPEID optional_assign IN expression
   49               | OBJECTID ':' TYPEID optional_assign ',' let_expression
   50               | error ';'

   51 optional_assign: %empty
   52                | ASSIGN expression

   53 branch_list: branch
   54            | branch_list branch

   55 branch: OBJECTID ':' TYPEID DARROW expression ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 18 19 20 37
')' (41) 9 18 19 20 37
'*' (42) 30
'+' (43) 28
',' (44) 15 47 49
'-' (45) 29
'.' (46) 18 19
'/' (47) 31
':' (58) 9 10 11 16 48 49 55
';' (59) 4 5 6 9 12 42 43 44 50 55
'<' (60) 33
'=' (61) 35
'@' (64) 19
'{' (123) 4 5 9 23
'}' (125) 4 5 9 23
'~' (126) 32
error (256) 6 12 44 50
CLASS (258) 4 5
ELSE (259) 21
FI (260) 21
IF (261) 21
IN (262) 48
INHERITS (263) 5
LET (264) 24
LOOP (265) 22
POOL (266) 22
THEN (267) 21
WHILE (268) 22
CASE (269) 25
ESAC (270) 25
OF (271) 25
DARROW (272) 55
NEW (273) 26
ISVOID (274) 27
STR_CONST (275) 40
INT_CONST (276) 39
BOOL_CONST (277) 41
TYPEID (278) 4 5 9 10 11 16 19 26 48 49 55
OBJECTID (279) 9 10 11 16 17 18 19 20 38 48 49 55
ASSIGN (280) 11 17 52
NOT (281) 36
LE (282) 34
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
feature_list (49)
    on left: 7 8, on right: 4 5 8
feature (50)
    on left: 9 10 11 12, on right: 8
formal_list (51)
    on left: 13 14 15, on right: 9 15
formal (52)
    on left: 16, on right: 14 15
expression (53)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
    35 36 37 38 39 40 41, on right: 9 11 17 18 19 21 22 25 27 28 29
    30 31 32 33 34 35 36 37 42 43 46 47 48 52 55
block_expressions (54)
    on left: 42 43 44, on right: 23 43
arg_expression_list (55)
    on left: 45 46 47, on right: 18 19 20 47
let_expression (56)
    on left: 48 49 50, on right: 24 49
optional_assign (57)
    on left: 51 52, on right: 48 49
branch_list (58)
    on left: 53 54, on right: 25 54
branch (59)
    on left: 55, on right: 53 54


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 13


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 14


State 13

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 17

    feature  go to state 18


State 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 19


State 15

   12 feature: error . ';'

    ';'  shift, and go to state 20


State 16

    9 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   10        | OBJECTID . ':' TYPEID
   11        | OBJECTID . ':' TYPEID ASSIGN expression

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


State 17

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 23


State 18

    8 feature_list: feature_list feature .

    $default  reduce using rule 8 (feature_list)


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 24

    feature  go to state 18


State 20

   12 feature: error ';' .

    $default  reduce using rule 12 (feature)


State 21

    9 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 13 (formal_list)

    formal_list  go to state 26
    formal       go to state 27


State 22

   10 feature: OBJECTID ':' . TYPEID
   11        | OBJECTID ':' . TYPEID ASSIGN expression

    TYPEID  shift, and go to state 28


State 23

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 29


State 25

   16 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 30


State 26

    9 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   15 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 31
    ','  shift, and go to state 32


State 27

   14 formal_list: formal .

    $default  reduce using rule 14 (formal_list)


State 28

   10 feature: OBJECTID ':' TYPEID .
   11        | OBJECTID ':' TYPEID . ASSIGN expression

    ASSIGN  shift, and go to state 33

    $default  reduce using rule 10 (feature)


State 29

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 30

   16 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 34


State 31

    9 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 35


State 32

   15 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 25

    formal  go to state 36


State 33

   11 feature: OBJECTID ':' TYPEID ASSIGN . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 51


State 34

   16 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 16 (formal)


State 35

    9 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 52


State 36

   15 formal_list: formal_list ',' formal .

    $default  reduce using rule 15 (formal_list)


State 37

   21 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 53


State 38

   24 expression: LET . let_expression

    error     shift, and go to state 54
    OBJECTID  shift, and go to state 55

    let_expression  go to state 56


State 39

   22 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 57


State 40

   25 expression: CASE . expression OF branch_list ESAC

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 58


State 41

   26 expression: NEW . TYPEID

    TYPEID  shift, and go to state 59


State 42

   27 expression: ISVOID . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 60


State 43

   40 expression: STR_CONST .

    $default  reduce using rule 40 (expression)


State 44

   39 expression: INT_CONST .

    $default  reduce using rule 39 (expression)


State 45

   41 expression: BOOL_CONST .

    $default  reduce using rule 41 (expression)


State 46

   17 expression: OBJECTID . ASSIGN expression
   20           | OBJECTID . '(' arg_expression_list ')'
   38           | OBJECTID .

    ASSIGN  shift, and go to state 61
    '('     shift, and go to state 62

    $default  reduce using rule 38 (expression)


State 47

   36 expression: NOT . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 63


State 48

   32 expression: '~' . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 64


State 49

   23 expression: '{' . block_expressions '}'

    error       shift, and go to state 65
    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression         go to state 66
    block_expressions  go to state 67


State 50

   37 expression: '(' . expression ')'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 68


State 51

   11 feature: OBJECTID ':' TYPEID ASSIGN expression .
   18 expression: expression . '.' OBJECTID '(' arg_expression_list ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' arg_expression_list ')'
   28           | expression . '+' expression
   29           | expression . '-' expression
   30           | expression . '*' expression
   31           | expression . '/' expression
   33           | expression . '<' expression
   34           | expression . LE expression
   35           | expression . '=' expression

    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '/'  shift, and go to state 74
    '*'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 11 (feature)


State 52

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 78


State 53

   18 expression: expression . '.' OBJECTID '(' arg_expression_list ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' arg_expression_list ')'
   21           | IF expression . THEN expression ELSE expression FI
   28           | expression . '+' expression
   29           | expression . '-' expression
   30           | expression . '*' expression
   31           | expression . '/' expression
   33           | expression . '<' expression
   34           | expression . LE expression
   35           | expression . '=' expression

    THEN  shift, and go to state 79
    LE    shift, and go to state 69
    '<'   shift, and go to state 70
    '='   shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '/'   shift, and go to state 74
    '*'   shift, and go to state 75
    '@'   shift, and go to state 76
    '.'   shift, and go to state 77


State 54

   50 let_expression: error . ';'

    ';'  shift, and go to state 80


State 55

   48 let_expression: OBJECTID . ':' TYPEID optional_assign IN expression
   49               | OBJECTID . ':' TYPEID optional_assign ',' let_expression

    ':'  shift, and go to state 81


State 56

   24 expression: LET let_expression .

    $default  reduce using rule 24 (expression)


State 57

   18 expression: expression . '.' OBJECTID '(' arg_expression_list ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' arg_expression_list ')'
   22           | WHILE expression . LOOP expression POOL
   28           | expression . '+' expression
   29           | expression . '-' expression
   30           | expression . '*' expression
   31           | expression . '/' expression
   33           | expression . '<' expression
   34           | expression . LE expression
   35           | expression . '=' expression

    LOOP  shift, and go to state 82
    LE    shift, and go to state 69
    '<'   shift, and go to state 70
    '='   shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '/'   shift, and go to state 74
    '*'   shift, and go to state 75
    '@'   shift, and go to state 76
    '.'   shift, and go to state 77


State 58

   18 expression: expression . '.' OBJECTID '(' arg_expression_list ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' arg_expression_list ')'
   25           | CASE expression . OF branch_list ESAC
   28           | expression . '+' expression
   29           | expression . '-' expression
   30           | expression . '*' expression
   31           | expression . '/' expression
   33           | expression . '<' expression
   34           | expression . LE expression
   35           | expression . '=' expression

    OF   shift, and go to state 83
    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '/'  shift, and go to state 74
    '*'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77


State 59

   26 expression: NEW TYPEID .

    $default  reduce using rule 26 (expression)


State 60

   18 expression: expression . '.' OBJECTID '(' arg_expression_list ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' arg_expression_list ')'
   27           | ISVOID expression .
   28           | expression . '+' expression
   29           | expression . '-' expression
   30           | expression . '*' expression
   31           | expression . '/' expression
   33           | expression . '<' expression
   34           | expression . LE expression
   35           | expression . '=' expression

    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 27 (expression)


State 61

   17 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 84


State 62

   20 expression: OBJECTID '(' . arg_expression_list ')'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    $default  reduce using rule 45 (arg_expression_list)

    expression           go to state 85
    arg_expression_list  go to state 86


State 63

   18 expression: expression . '.' OBJECTID '(' arg_expression_list ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' arg_expression_list ')'
   28           | expression . '+' expression
   29           | expression . '-' expression
   30           | expression . '*' expression
   31           | expression . '/' expression
   33           | expression . '<' expression
   34           | expression . LE expression
   35           | expression . '=' expression
   36           | NOT expression .

    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '/'  shift, and go to state 74
    '*'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 36 (expression)


State 64

   18 expression: expression . '.' OBJECTID '(' arg_expression_list ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' arg_expression_list ')'
   28           | expression . '+' expression
   29           | expression . '-' expression
   30           | expression . '*' expression
   31           | expression . '/' expression
   32           | '~' expression .
   33           | expression . '<' expression
   34           | expression . LE expression
   35           | expression . '=' expression

    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 32 (expression)


State 65

   44 block_expressions: error . ';'

    ';'  shift, and go to state 87


State 66

   18 expression: expression . '.' OBJECTID '(' arg_expression_list ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' arg_expression_list ')'
   28           | expression . '+' expression
   29           | expression . '-' expression
   30           | expression . '*' expression
   31           | expression . '/' expression
   33           | expression . '<' expression
   34           | expression . LE expression
   35           | expression . '=' expression
   42 block_expressions: expression . ';'

    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '/'  shift, and go to state 74
    '*'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77
    ';'  shift, and go to state 88


State 67

   23 expression: '{' block_expressions . '}'
   43 block_expressions: block_expressions . expression ';'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '}'         shift, and go to state 89
    '('         shift, and go to state 50

    expression  go to state 90


State 68
